Fixed confirmation buttons being too small

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -195,7 +195,7 @@ ul, ol {
 }
 
 .confirmation-dialbox .footer button {
-    margin: 0 20px;
+    height: 100%;
 }
 
 .inventory.active,
@@ -402,7 +402,7 @@ ul, ol {
     align-items: center;
 }
 
-.footer-right .button {
+.footer .button {
     margin: 0 20px;
     height: 50%;
 }
